Fixed overflow bug, site is fully responsive

--- a/assets/main.css
+++ b/assets/main.css
@@ -159,10 +159,10 @@ section {
     align-items: center;
     position: relative;
     width: 100%;
+    overflow: hidden;
 }
 
 .profile-img {
-    position: absolute;
     width: 100%;
     rotate: 5deg;
     z-index: -1;
@@ -206,12 +206,14 @@ section {
     text-align: center;
     width: 100%;
     background-color: var(--yellow);
+    overflow: hidden;
 }
 
 .about-image-container {
     display: flex;
     width: 100%;
     justify-content: flex-end;
+
 }
 
 .about-image-container>img {
